# SongImporter

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
.github/workflows/: main.yml  publish.yml
SongImporterGui/: CMakeLists.txt  FileDropArea.qml  ImporterButton.qml  InputField.qml  InputFieldButton.qml  Main.qml  SongExportForm.qml  Theme.qml  main.cpp
SongImporterGui/Resources/: resources.qrc  resources.rc
SongImporterLib/: CMakeLists.txt  FileUtils.cpp  FileUtils.h  IsFileRule.cpp  IsFileRule.h  IsFileValidator.cpp  IsFileValidator.h  IsFolderRule.cpp  IsFolderRule.h  IsFolderValidator.cpp  IsFolderValidator.h  OperationResult.h  Rule.h  SoftwareUtils.cpp  SoftwareUtils.h  SongImporterLib.cpp  SongImporterLib.h  SongValidator.h  stdafx.h
